styles.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap');

:root {--blue:#0065FC; --gray:#F2F2F2; --lightblue:#DEEBFF} /*using var will allow me to change the colors of all the elements of the page at once if the client changes his mind about the color*/

::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
    color: black;
    opacity: 1; /* Firefox */
    font-family:'Raleway', sans-serif;
  }

*,*:before,*:after{box-sizing:border-box; margin:0; padding:0}

html{font-size:18px}/*This will allow me to set the margins in rem, and so they will be all the same : 1rem = 18px*/

body{/*height:100vh*/ font-family:'Raleway', sans-serif} /*I want to apply this font-family to the whole document, that's why I put it in the body selector*/

header, section{padding-top:2rem; padding-bottom:2rem}
section{padding-left:1rem; padding-right:1rem}
.mostPopular, footer{background-color:var(--gray)}
.logo, .register{margin-bottom:1rem}
nav, h1 ~ p, form, h2 {margin-bottom:1.5rem}

header{display:flex; flex-direction:column; justify-content:space-around; padding-top:2rem}
nav{display:flex; justify-content:space-between; flex-wrap:wrap}
footer{padding-left:1rem; padding-right:1rem; padding-top:2rem; padding-bottom:2rem}
h1{font-size:1.4rem}
h2{font-size:1rem}
ul{list-style:none}
a{text-decoration:none; color:#000000}
span{font-weight:bold}

.sectionTitle{font-size:1.4rem}
.mostPopularTitle{display:flex; justify-content:space-between}
.mostPopular_icon{margin-top:.4rem}

footer nav{display:flex; flex-direction:column}
footer div{padding-bottom:2rem}
footer div:last-child{padding-bottom:0}

.mobileLineHeight{line-height:1.8rem}

/*LOGO, REGISTER, NAVIGATION*/
.logo{max-width:100px; height:auto; margin-left:1rem; margin-top:-1rem} /*margin-left:30px; margin-top:0*/
.register{margin-right:1rem}
.register a{color:var(--blue)}
.boldLink{font-weight:bold}
.title{margin-left:1em; margin-right:1rem}
.infoText{font-size:1em; margin-left:1rem; margin-right:1rem}
.flexUl{width:100%; display:flex}
.flexUl li{border:none; border-bottom:solid var(--gray) 2px; padding:10px; text-align:center; width:50vw}
.flexUl li:first-child{color:var(--blue); border:none; border-bottom:solid var(--blue) 2px; padding:10px; text-align:center}

/*CITY SELECTOR*/
.inputBox{align-self:center; display: inline-block; border-radius:15px; width:90vw; border: 1px solid var(--gray); position:relative;}
.placeIcon{background-color:var(--gray); padding:16px; border-top-left-radius:15px; border-bottom-left-radius:15px}
.citySelector{border:none; width:69%; padding-top:15px; padding-bottom:15px}
.searchIcon{cursor:pointer; border:none; border-radius:15px; background-color:var(--blue); padding:16px; color:white; position:absolute; right:0}
.searchText{display:none}

/*FILTERS*/
.filtersContainer{margin-left:1rem; display:flex; flex-direction:column}
.filtersTitle{margin-bottom:.5rem}
.filterButton{border:solid var(--gray) 2px; background-color:#fff; border-radius:25px; padding-right:16px; margin-right:10px; margin-bottom:1em; cursor:pointer}
.filterIcon{padding:16px; background-color:var(--lightblue); border-radius:25px; margin-right:8px; color:var(--blue)}

.infoText{margin-top:1.5rem}
.infoIcon{background:var(--blue); color:white; border-radius:50px; margin-right:5px}

/*RATING STARS*/
.stars{font-size:10px; margin-bottom:10px}
.checked{color:var(--blue)}
.unchecked{color:#c9c9c9}

/*CARDS*/ /*height:116px; width:288px;*/
.card_border{border-radius:20px; box-shadow:5px 5px 10px rgb(224, 224, 224)}

.mostPopular{width:100%}
.cardsContainer_mostPopular{display:flex; flex-direction:column; ; justify-content:space-around}
.card_info{display:flex; flex-direction:column; justify-content:space-between; font-size:.8rem; margin-top:1rem}
.mostPopular_card{height:12vh; width:90vw; display:flex; margin-bottom:1rem; background-color:white; padding-top:.2rem; padding-left:.2rem; padding-bottom:.2rem; padding-right:1rem}
.mostPopular_card_img{width:35%; margin-right:1rem; height:auto; object-fit:cover; border-top-left-radius:20px; border-bottom-left-radius:20px}

.accomodations{width:100%}
.cardsContainer_accomodations{display:flex; flex-direction:column; ; justify-content:space-around}
.accomodations_card{height:20vh; width:100%; display:flex; flex-direction:column; margin-bottom:1rem; background-color:white; padding-top:.2rem; padding-left:.2rem; padding-bottom:3rem; padding-right:.2rem}
.accomodations_card_img{height:65%; width:100%; object-fit:cover; border-top-left-radius:20px; border-top-right-radius:20px}
.accomodations_card_info{margin-left:1rem; line-height:1.3rem}

.cardsContainer_activities{
  padding:1rem;
  display:flex;
  flex-direction:column;
}

.activitiesCard{
  padding:2px;
  height:200px;
  border-radius:20px;
  margin-bottom:.5rem;
  display:flex;
  flex-direction:column;
  box-shadow:5px 5px 10px rgb(224, 224, 224)
}

.activitiesCardBG{
  border-top-left-radius:20px;
  border-top-right-radius:20px;
  background-size:cover;
  background-position:center;
  width:auto;
  height:75%; 
}

.activitiesCardBG1{background-image:url(images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg)}
.activitiesCardBG2{background-image:url(images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg)}
.activitiesCardBG3{background-image:url(images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg)}
.activitiesCardBG4{background-image:url(images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg)}
.activitiesCardBG5{background-image:url(images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg)}
.activitiesCardBG6{background-image:url(images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg)}

.activitiesCardH3{font-size:1rem; font-weight:bold; padding:.5rem; border-radius:20px}

@media screen and (min-width:1010px){
  .cardsContainer_activities{
    margin:-1rem;
    flex-direction:row;
    flex-wrap:wrap;
 }
 .activitiesColumn{flex-grow:1; flex-shrink:0; flex-basis:22vw; margin-right:1.5rem; display:flex; flex-direction:column}
 .activitiesColumn:last-child{margin-right:0}
 .activitiesCard1, .activitiesCard4{flex-grow:1}
 .activitiesCard2{min-height:250px; margin-bottom:1.5rem}
 .activitiesCard5{margin-bottom:1.5rem}
 .activitiesCard5, .activitiesCard6{flex-grow:1}
}

@media screen and (min-width:400px){
  .searchText{display:block; font-family:'Raleway', sans-serif; font-size:1rem; font-weight:bold; cursor:pointer; border:none; border-top-right-radius:15px; border-bottom-right-radius:15px; background-color:var(--blue); padding:16px; color:white; position:absolute; right:0; top:0}
  .searchIcon{display:none}
  .inputBox{width:350px;}
}

@media screen and (min-width:480px){
  .cardsContainer_accomodations{display:flex; flex-direction:row; flex-wrap:wrap}
}

@media screen and (min-width:500px){
  .mostPopular_card{height:116px; width:450px;}
  .accomodations_card{width:210px}
}

@media screen and (min-width:640px){
  .cardsContainer_mostPopular{flex-direction:row; flex-wrap:wrap; justify-content:flex-start}
  .mostPopular_card{height:116px; width:288px; margin-right:10px}
  /*.cardsContainer_activities{
    display:grid;
    grid-template-columns:repeat(2, 1fr);
    grid-gap:1em
  }*/
}

@media screen and (min-width:650px){
  header{padding-top:0}
  .logo{padding-top:1.5rem}
  .register{padding-top:21px; margin-right:2rem; order:1}
  nav{flex-direction:row; justify-content:flex-end; width:100vw}
  .flexUl{margin-left:auto; width:300px}
  .flexUl li{border:none; padding-top:21px}
  .flexUl li:first-child{border:none; border-top:solid var(--blue) 2px; padding-top:19px}
}

@media screen and (min-width:662px){
  .accomodations_card{width:200px}
}

@media screen and (min-width:750px){
  .filtersContainer{display:flex; flex-direction:row; align-items:center}
  .filtersTitle{margin-bottom:0; margin-right:.5rem}
  .filterButton{margin-bottom:0}
  .accomodations_card{height:165px; width:288px}
}

@media screen and (min-width:780px){
  footer nav{flex-direction:row; justify-content:flex-start}
  footer nav div{display:flex; flex-direction:column; margin-right:95px}
  footer div{padding-bottom:0}
  .mostPopular_card{height:15vh; width:240px}
}

@media screen and (min-width:896px){
  .cardsContainer_accomodations{justify-content:flex-start}
  .accomodations_card{width:210px; margin-right:10px}
  .cardsContainer_mostPopular{justify-content:flex-start}
  .mostPopular_card{height:116px; width:288px; margin-right:10px}
}

@media screen and (min-width:900px){
  .inputBox{align-self:flex-start; margin-left:10px}
}

/*@media screen and (min-width:960px){
  .cardsContainer_activities{
    grid-template-columns:repeat(3, 1fr)
  }
}*/

@media screen and (min-width:1010px){
  .sectionsFlex{display:flex; justify-content:space-around; flex-direction:row}
  .mostPopular{width:32vw; order:1; border-radius:20px}
  .cardsContainer_mostPopular{flex-direction:column}
  .accomodations{width:62vw; border-radius:20px; background-color:var(--gray)}
}


/*ATTENTION PB SUR LES HEIGHT DANS LA PARTIE ACTIVITES POUR LE DESKTOP -> vient du passage à la ligne du texte dans certaines cartes*/

/*@media screen and (min-width:1280px){
  .cardsContainer_activities{
    display:grid;
    grid-gap:1em;
    grid-template-columns:repeat(4,1fr);
    grid-template-rows:repeat(8,480px)
  }
  .activities_card{background-color:white; padding-bottom:20px; height:480px; padding-top:0; padding-left:0; padding-right:0; width:23vw; border-radius:20px; display:flex; flex-direction:column; align-items:center; justify-content:space-between; box-shadow:5px 5px 10px rgb(224, 224, 224)}
  .activities_card_img1{object-fit:cover; height:100%; width:23vw; margin:0; border-top-left-radius:20px; border-top-right-radius:20px}
  .activities_card_img2{object-fit:cover; height:88%; width:23vw; margin:0; border-top-left-radius:20px; border-top-right-radius:20px}
  .activities_card_img3{object-fit:cover; height:88%; width:23vw; margin:0; border-top-left-radius:20px; border-top-right-radius:20px}
  .activities_card_img4{object-fit:cover; height:88%; width:23vw; margin:0; border-top-left-radius:20px; border-top-right-radius:20px}
  .activities_card_img5{object-fit:cover; height:88%; width:23vw; margin:0; border-top-left-radius:20px; border-top-right-radius:20px}
  .activities_card_img6{object-fit:cover; height:88%; width:23vw; margin:0; border-top-left-radius:20px; border-top-right-radius:20px}
  .grid_card_one{grid-column:1/2; grid-row:1/8}
  .grid_card_two{grid-column:2/3; grid-row:1/5; height:284px}
  .grid_card_three{grid-column:2/3; grid-row:5/8; height:164px}
  .grid_card_four{grid-column:3/4; grid-row:1/8}
  .grid_card_five{grid-column:4/5; grid-row:1/4}
  .grid_card_six{grid-column:4/5; grid-row:4/8}
}*/

